FFS-2295: Added css to fix button styled anchor tags from having content that is cut off

--- a/app/app/assets/stylesheets/cbv.scss
+++ b/app/app/assets/stylesheets/cbv.scss
@@ -132,3 +132,16 @@ html {
   @include typeset-h3;
   font-family: inherit;
 }
+
+// Fix preventing buttons with a "display-block" class
+// from having vertically cut off content.
+.usa-button {
+  &.display-block,
+  &[class*="margin-bottom"] {
+    height: auto;
+    min-height: 40px;
+    line-height: 1.3;
+    white-space: normal;
+    padding: 0.75rem 1.25rem;
+  }
+}
